Bug 471642 Rename nsSelectionBatcher to nsSelectionBatcherForTable in nsTableEditor.cpp r+sr=roc